Mini refactor of GameEventManager